<?xml version="1.0"?>
<package>
  <name>seek_cam</name>
  <version>0.0.0</version>
  <description>Support to Seek thermal camera</description>

  <maintainer email="alexanderm2230@gmail.com">Alexander Marin</maintainer>

  <license>TODO</license>

  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/seek_cam</url> -->

  <author email="alexanderm2230@gmail.com">Alexander Marin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
